# flatland-rl

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG_old.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  FAQ.md  FAQ_Bugs.md  FAQ_Challenge.md  FAQ_Repository.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PerformanceChecker.py  README.md  README.rst  benchmark.txt  benchmark_diff_param.txt  changelog.md  flatland_2.0.md  graph-matrix.ipynb  make_coverage.py  make_docs.py  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  requirements_ci.txt  requirements_continuous_integration.txt  requirements_dev.txt  run_local_readytodepart_check.py  setup.cfg  setup.py  simple_env_creation.ipynb  (+1 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  documentation_request.md  enhancement.md  enhancement_request.md
.github/workflows/: build-test.yml  checks.yml  docker.yml  main.yml  publish-test.yml  publish.yml
.gitlab/issue_templates/: Story.md
agents/: model.py
baselines/: train.py
baselines/Nets/: avoid_checkpoint9900.pth  dummy
benchmarks/: bench_persistence.py  benchmark_all_examples.py  benchmark_episodes.py  benchmark_episodes_deadlock_avoidance.py  benchmark_k_shortest_paths.py  benchmark_k_shortest_paths_profiling.ipynb  benchmark_utils.py  complex_rail_benchmark.py  flatland_performance_profiling.ipynb  play_model_benchmark.py  profile_all_examples.py  run_all_examples.py
docs/: 03_tutorials.rst  04_specifications.rst  10_interface.rst  10_interface_toc.rst  FAQ.rst  Makefile  about.rst  about_flatland.rst  changelog_index.rst  conf.py  flatland.baselines.rst  flatland.core.grid.rst  flatland.core.rst  flatland.envs.rst  flatland.evaluators.rst  flatland.rst  flatland.utils.rst  flatland_2.0.md  getting_start_with_observationbuilder.rst  gettingstarted.rst  index.rst  installation.rst  intro_observation_actions.rst  intro_observationbuilder.rst  localevaluation.rst  make.bat  modules.rst  observation_actions.rst  specifications_index.rst  usage.rst
docs/interface/: pettingzoo.md  pettingzoo.rst  wrappers.md  wrappers.rst
docs/specifications/: FAQ.rst  core.md  environment.md  intro.md  railway.md  rendering.md  specifications.md  (+1 more)
episodes/: .gitignore
examples/: Simple_Realistic_Railway_Generator.py  Timer.py  complex_rail_benchmark.py  complex_scene.py  custom_observation_example.py  custom_observation_example_01.py  custom_observation_example_01_SimpleObs.py  custom_observation_example_02.py  custom_observation_example_02_SingleAgentNavigationObs.py  custom_observation_example_03.py  custom_observation_example_03_ObservePredictions.py  custom_railmap_example.py  debugging_example_DELETE.py  demo.py  env_generators.py  example_basic_elements_test.py  example_flatland_000.py  example_flatland_001.py  example_flatland_002.py  example_flatland_003.py  example_network_000.py  example_network_001.py  example_network_002.py  example_network_003.py  flatland_2_0_example.py  flatland_3_0_example.py  flatland_env.py  flatland_performance_profiling.py  flatland_pettingzoo.py  flatland_pettingzoo_rllib.py  flatland_pettingzoo_stable_baselines.py  generate_complex_scenario.py  generate_random_scenario.py  interactive_ai.py  introduction_flatland_2_1.py  introduction_flatland_2_1_1.py  introduction_flatland_3.py  play_model.py  qt2.py  sample_10_10_rail.npy  (+8 more)
examples-not-running/: simple_example_3.py
flatland/: __init__.py  cli.py
getting_started/: getting_started.bat  getting_started.sh  run_notebooks.bat  run_notebooks.sh
images/: basic-env.npz
notebooks/: Agent-Close-Following.ipynb  CanvasEditor.ipynb  Editor2.ipynb  Google_Research_Colabl_Flatland_Animation_Demo_.ipynb  Scene_Editor.ipynb  Simple_Rendering_Demo.ipynb  Untitled.ipynb  Untitled1.ipynb  basic_elements.pkl  basic_elements_test.pkl  colab-animate.ipynb  complex_scene.pkl  flatland-animate.ipynb  flatland_animate.ipynb  graph_demo.ipynb  interactiveai.ipynb  notebook-list  render-episode.ipynb  render1.ipynb  render_episode.ipynb  rllib_demo.ipynb  run_all_notebooks.py  scene_editor.ipynb  simple-graph-plot-2022.ipynb  simple_animation_demo.ipynb  simple_env_creation.ipynb  simple_example1_env_from_tuple.ipynb  simple_example2_generate_random_rail.ipynb  simple_example_3_manual_control.ipynb  simple_example_manual_control.ipynb  simple_rendering_demo.ipynb  test-collision.ipynb  test-saved-envs.ipynb  test-service-timeouts.ipynb  test-service.ipynb  test_astar.py  test_collision.ipynb  test_saved_envs.ipynb  test_service.ipynb  trajectories-analysis.ipynb  (+1 more)
rendering/: make_video_ffmpeg.txt
scripts/: convert_svg_2_png.py  make_docs.py  run_local_multispeed.py  verify_cython_extension_build.py
tests/: manual_test_eval_timeout.sh  simple_rail.py  test_action_plan.py  test_add.py  test_agent_chains.py  test_distance_map.py  test_env_creator.py  test_env_edit.py  test_env_edit_utils.py  test_env_generator.py  test_env_malfunction_effects_generator.py  test_env_observation_builder.py  test_env_prediction_builder.py  test_env_step_utils.py  test_env_utils.py  test_environments.py  test_envs_malfunction_effects_generator.py  test_eval_timeout.py  test_evaluators_service.py  test_file_load.py  test_flaltland_rail_agent_status.py  test_flatland.py  test_flatland_action_preprocessing.py  test_flatland_core_grid4_generators_util.py  test_flatland_core_grid_grid4_utils.py  test_flatland_core_grid_grid_utils.py  test_flatland_core_transition_map.py  test_flatland_core_transitions.py  test_flatland_env_sparse_rail_generator.py  test_flatland_envs_agent_utils.py  test_flatland_envs_city_generator.py  test_flatland_envs_env_utils.py  test_flatland_envs_file_generators.py  test_flatland_envs_file_line_generator.py  test_flatland_envs_file_rail_generator.py  test_flatland_envs_file_rail_generators.py  test_flatland_envs_file_timetable_generator.py  test_flatland_envs_observations.py  test_flatland_envs_persistence.py  test_flatland_envs_predictions.py  (+50 more)
(+258 files in other folders)
